--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,9 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Mynewapp</title>
+    <title>Vetzoneproject</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
